<resources>
    <string name="app_name">Color Generator</string>
    <string name="title_settings">Settings</string>
    <string name="title_generator">Generator</string>

    <string name="onboarding_title_1">Welcome to Apphud Sample!</string>
    <string name="onboarding_text_1">Learn how Apphud SDK is integrated</string>
    <string name="onboarding_title_2">Color Generator</string>
    <string name="onboarding_text_2">Generate Any Random Color</string>
    <string name="onboarding_title_3">Unlimited generations</string>
    <string name="onboarding_text_3">Create as much as you want</string>

    <string name="continue_text">Continue</string>
    <string name="get_started">Get Started</string>
    <string name="generate_more">Generate more</string>
    <string name="you_have_text">You have {{count}} generations left</string>
    <string name="copy_color">Copy Color</string>
    <string name="your_color_is">Your color is: </string>

    <string name="app_version">App Version</string>
    <string name="sdk_version">SDK Version</string>
    <string name="restore_purchases">Restore Purchases</string>
    <string name="premium_status">Premium Status</string>
    <string name="premium_value_yes">Pro</string>
    <string name="premium_value_no">No Pro</string>
    <string name="color">Color</string>
    <string name="copied">Copied</string>
    <string name="copy_to_pasteboard">Copy to pasteboard</string>

    <string name="apphud_premium">Apphud Premium</string>
    <string name="error_default">Sorry, Something went wrong...</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="you_are_premium">You are premium!</string>

    <string name="facebook_app_id">2385075801820694</string>
    <string name="facebook_client_token">05f401e4f23e5621e4dd40b3417961fb</string>
    <string name="apps_flyer_key">AbwD69b6Foj9WT3huU9emh</string>
    <string name="amplitude_key">2c91017f55a0640cd7a9319c570b7c4f</string>
</resources>